# gpower

./: .gitignore  Cargo.toml  README.md  meson.build
.github/workflows/: build.yaml
build-aux/: bin-dist.sh  cargo.sh
data/: net.gourlaysama.GPowerTweaks.desktop  net.gourlaysama.GPowerTweaks.metainfo.xml.in
data/ui/: shell.css  window.ui
src/: app.rs  fs.rs  lib.rs  main.rs
src/db/: mod.rs  parsers.rs
src/pci/: mod.rs
src/usb/: db.rs  mod.rs
