[package]
name = "gpower-tweaks"
version = "0.1.0-dev"
authors = ["Antoine Gourlay <antoine@gourlay.fr>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
encoding_rs = "0.8"
gdk = "0.13"
gio = { version = "0.9", features = ["v2_46"]}
glib = "0.10"
gtk = { version = "0.9", features = ["v3_22"] }
humantime = "2"
log = "0.4"
nom = "6"
pretty_env_logger = "0.4"

[profile.release]
lto=true